<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/otpbackground"
    android:contentDescription="@string/otpicon"
    tools:context=".recreate_otp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/otpicon"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorAccent"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/otpheading"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/otpparagraph1"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="@string/otpparagraph2" />

            <TextView
                android:id="@+id/user_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/otpparagraph3"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/number1"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:maxLength="1"
                android:nextFocusForward="@id/number2"
                android:inputType="phone" />

            <EditText
                android:id="@+id/number2"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:maxLength="1"
                android:nextFocusRight="@id/number3"
                android:inputType="phone" />

            <EditText
                android:id="@+id/number3"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:maxLength="1"
                android:nextFocusRight="@id/number4"
                android:inputType="phone" />

            <EditText
                android:id="@+id/number4"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:maxLength="1"
                android:inputType="phone" />
        </LinearLayout>

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/validationerror" />

        <TextView
            android:id="@+id/resend_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:textColor="@color/grey"
            android:text="@string/otpparagraph4" />

    </LinearLayout>

    <ImageView
        android:id="@+id/redirectback"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/leftarrow" />

</androidx.constraintlayout.widget.ConstraintLayout>