<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/otpbackground"
    tools:context=".passcode">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/otpicon"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorAccent"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/passcodeheading"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/passcodeparagraph1"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="@string/passcodeparagraph2" />

            <TextView
                android:id="@+id/user_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/passcodeparagraph3"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/number1"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="numberPassword"
                android:maxLength="1" />

            <EditText
                android:id="@+id/number2"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="numberPassword"
                android:maxLength="1" />

            <EditText
                android:id="@+id/number3"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="numberPassword"
                android:maxLength="1" />

            <EditText
                android:id="@+id/number4"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="numberPassword"
                android:maxLength="1" />

            <ImageView
                android:id="@+id/set_passcode"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="7dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_eye_solid" />
        </LinearLayout>

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/validationerror" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="@string/passcodeparagraph4" />

            <TextView
                android:id="@+id/re_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/passcodeparagraph5"
                android:textColor="@color/colorAccent" />


        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/redirectback"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/leftarrow" />
</androidx.constraintlayout.widget.ConstraintLayout>