<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/alert_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20sp"
    app:cardElevation="20sp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/dashboardstatusbar">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_gravity="center">

    <ImageView
        android:id="@+id/close_alert"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/alertbox_cross_icon_debit">
    </ImageView>

    <LinearLayout
        android:id="@+id/summary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <RelativeLayout
          android:id="@+id/transaction_image_box"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginBottom="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/customer_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/s"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/customer_contact_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customer_image"

            android:layout_marginTop="5dp"
            android:text="@string/customerphonenumber">

        </TextView>
      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/transaction_box"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/transaction_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

          <TextView
              android:id="@+id/transaction_amount"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_vertical"
              android:text="@string/transactionamountdebit"
              android:textColor="@color/warning"
              android:textSize="35sp">

          </TextView>

          <ImageView
              android:id="@+id/transactionamountsymbol"
              android:layout_width="35dp"
              android:layout_height="23dp"
              android:layout_gravity="center_vertical"
              android:layout_marginTop="2dp"
              android:src="@drawable/debit_rs_symbol"></ImageView>
        </LinearLayout>



        <TextView
            android:id="@+id/transaction_remarks"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/transaction_layout"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/transaction_details"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/transaction_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/transaction_remarks"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/transactiondate">

        </TextView>
      </RelativeLayout>

    </LinearLayout>

    <LinearLayout
          android:id="@+id/share_layout"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:orientation="horizontal"
          android:layout_alignParentBottom="true"
          android:gravity="center"
          >
        <ImageView
            android:id="@+id/share_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/debit_share_icon">

        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:text="Share With Your Customer">
        </TextView>
      </LinearLayout>

  </LinearLayout>



</com.google.android.material.card.MaterialCardView>